<resources>
    <string name="app_name">PayOff</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PayOff</string>
    <string name="nav_header_subtitle">paymentsforever@finastra.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="buttonOnWifi">WiFiOn</string>
    <string name="buttonSend">SEND</string>
    <string name="inputAmount">Enter Amount Here</string>
    <string name="buttonRequest">RECEIVE</string>
    <string name="wifiOnOff">Wifi</string>
    <string name="lbl_availableBalance">Offline Balance</string>
    <string name="defaultBalance">888888</string>
    <string name="delete">Del</string>
    <string name="lbl_amtToSend">Amount:</string>
    <string name="logout">Logout</string>
    <string name="support">Support</string>
    <string name="navTitleOthers">Others</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="defaultValueForInputAmount">0.0</string>
    <string name="defaultLogin">user1@gmail.com</string>
    <string-array name="currency_array">
        <item>PHP</item>
        <item>BGN</item>
        <item>CAD</item>
        <item>BRL</item>
        <item>HUF</item>
        <item>DKK</item>
        <item>JPY</item>
        <item>ILS</item>
        <item>TRY</item>
        <item>RON</item>
        <item>GBP</item>
        <item>HRK</item>
        <item>NOK</item>
        <item>USD</item>
        <item>MXN</item>
        <item>AUD</item>
        <item>IDR</item>
        <item>KRW</item>
        <item>HKD</item>
        <item>EUR</item>
        <item>ZAR</item>
        <item>ISK</item>
        <item>CZK</item>
        <item>THB</item>
        <item>MYR</item>
        <item>NZD</item>
        <item>PLN</item>
        <item>SEK</item>
        <item>RUB</item>
        <item>CNY</item>
        <item>SGD</item>
        <item>CHF</item>
        <item>INR</item>
    </string-array>
    <string name="title_activity_transaction">TransactionActivity</string>
    <string name="transactionRef">Transacation Reference:</string>
    <string name="title_activity_account">AccountActivity</string>
    <!-- Strings related to accounts -->
    <string name="accountNumber">Account Number</string>
    <string name="onlineBalance">Balance</string>
    <!-- Strings related to drawer navigation -->
    <string name="navBankAccount">Bank Accounts</string>
    <string name="loginAccount">My Account</string>
    <string name="lblFxChange">FX Exchange Rate</string>
    <string name="navHome">Home</string>
    <string name="btnLoad">LOAD</string>
    <string name="title_activity_offline_balance_transfer">Load Wallet</string>
    <string name="load_wallet">Load Wallet</string>
    <string name="title_activity_connect">ConnectActivity</string>
    <string name="title_activity_receive_payment">ReceivePaymentActivity</string>
    <string name="buttonDiscover">DISCOVER</string>
    <string name="transactionHistory">Transaction History</string>
    <string name="buttonWithdraw">WITHDRAW</string>
    <string name="title_activity_online_balance_transfer">OnlineBalanceTransferActivity</string>
</resources>
