<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navHome" />
        <item
            android:id="@+id/navBankAccount"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navBankAccount" />
        <item
            android:id="@+id/navFxChange"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/lblFxChange" />
        <item
            android:id="@+id/navTransactionHistory"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/transactionHistory" />
    </group>

    <item android:title="@string/navTitleOthers">
        <menu>
            <item
                android:id="@+id/navLoginAccount"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/loginAccount"/>

            <item
                android:id="@+id/navSupport"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/support" />
            <item
                android:id="@+id/navLogut"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
